Initial attempt at cleaning up the pmc list

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -28,18 +28,10 @@
 
 == The Apache NetBeans Team
 
-The Apache NetBeans Team members (sorted alphabetically).
-
-=== Alexander Simon 
-Committer, PPMC Member
-
-  - apache id: alexvsimon 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++/Fortran: project system, project discovery, editor, refactoring, hints, call graph, navigator, class view, hierarchy view, remote VCS, tool collection, code model 
-  -  NetBeans C/C++ Support 
+The Apache NetBeans Project Management Committee and Committers are as follows:
 
 === Anton Epple 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: monacotoni 
   - Dukehoff GmbH, Munich, Germany 
@@ -47,7 +39,7 @@ Committer, PPMC Member
   -  http://dukescript.com http://twitter.com/@monacotoni 
 
 === Antonio Vieiro 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: vieiro 
   - Spain 
@@ -55,28 +47,15 @@ Committer, PPMC Member
   -  http://vieiro.net 
 
 === Aristides Villarreal 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: avbravo 
   - Panama 
   - Java EE, NetBeans Platform, NoSQL 
   - http://twitter.com/@avbravo, http://avbravo.blogspot.com 
 
-=== Attila Kelemen 
-Committer, PPMC Member
-
-  - apache id: kelemen 
-  - Hungary 
-  - Gradle, Java 
-  -  https://github.com/kelemen 
-
-=== Bernd Ruehlicke
-  - Eriksfiord, Inc.,  Houston, TX, USA 
-  - Platform, Database, JavaFX, Ant 
-  -  http://bruehlicke.blogspot.com/ 
-
 === Bertrand Delacretaz 
-Mentor
+PMC Member
 
   - apache id: bdelacretaz 
   - Switzerland 
@@ -84,7 +63,7 @@ Mentor
   - http://grep.codeconsult.ch 
 
 === Bruno Flávio 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: brunoflavio 
   - Porto, Portugal 
@@ -95,99 +74,41 @@ Committer, PPMC Member
   - Scala, Akka 
   -  https://github.com/dcaoyuan 
 
-=== Cezariusz Marek
-  - Poland 
-  - Java, Platform, C/C++, NetCAT 
-
 === Christian Lenz 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: chrizzly 
   - Leipzig, Germany 
   - JavaScript, HTML5, Node, PHP, Java Editor, Database, Maven, Hints, C/C++, Plugin Dev. 
   -  https://github.com/Chris2011 https://www.facebook.com/Chrizzly42 
 
-=== Christian Stolz 
-Committer, PPMC Member
-
-  - apache id: chst 
-  - Janitza electronics GmbH 
-  - icon:map-marker-alt[]: Lahnau, Germany 
-  - Platform, Java 
-
 === Constantin Drabo 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: pandaconstantin 
   - Université de Ouagadougou, Ouagadougou, Burkina Faso 
   - Q/A , JavaEE, C/C++ , Javascript, HTML 
   - http://twitter.com/@pandaconstantin , http://blog.fedora-fr.org/pandaconstantin/ 
 
-=== Dave Schoorl
-  - Utrecht, The Netherlands 
-  - Platform, Java, Maven 
-  -  https://cwiki.apache.org/confluence/display/~dschoorl 
-
 === David Heffelfinger 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: dheffelfinger 
   - Ensode Technology, LLC,  Fairfax, VA, USA 
   - Java EE 
   -  http://www.ensode.net/roller/dheffelfinger/ 
 
-=== Danila Sergeyev 
-Committer, PPMC Member
-
-  - apache id: dsergeyev 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: editor hints, call graph, code refactorings; Docker 
-  -  NetBeans C/C++ Support 
-
-=== Djamel Torche
-  - AXA, Algeria 
-  - Java, JavaFX, Platform & API Support, Tutorials & Translations 
-  - , My LinkedIn Profile GitHub 
-
-=== Dmitry Avtonomov
-  - University of Michigan, Ann Arbor, MI, USA 
-  - Platform, Tutorials 
-  -  BatMass - mass spectrometry visualization tools 
-
-=== Dmitry Zharkov 
-Committer, PPMC Member
-
-  - apache id: dimazh 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: all components (PM) 
-  -  NetBeans C/C++ Support 
-
 === Emmanuel Hugonnet 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: ehsavoie 
   - Red Hat, Barraux, France 
   - WildFly plugin 
 
-=== Emmanel Lécharny
-Mentor
-
-  - apache id: elecharny 
-  - Symas, Paris, France 
-  -  http://hrabal.blogspot.com/ 
-
 === Eric Barboni
   - apache id: skygo 
   - ICS - IRIT, Université Paul Sabatier, Toulouse, France 
   - maven, platform, java editor 
-
-=== Ernest Lotter 
-Committer, PPMC Member
-
-  - apache id: elotter 
-  - Institute of Mine Seismology, Hobart, Australia 
-  - Platform, API Support, Tutorials, Editor 
-  -  https://www.facebook.com/ernest.lotter 
 
 === Fabrizio Giudici
   - Tidalwave s.a.s., Genoa / Milan, Italy 
@@ -195,66 +116,22 @@ Committer, PPMC Member
   -  http://tidalwave.it/fabrizio/blog/ 
 
 === Florian Vogler 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: fvogler 
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
 
-=== Gaurav Gupta 
-Committer, PPMC Member
-
-  - apache id: jgauravgupta 
-  - Bangalore, India 
-  - Java EE 
-  -  https://jeddict.github.io http://twitter.com/@jGauravGupta http://twitter.com/@ImJeddict 
-
 === Geertjan Wielenga 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: geertjan 
   - Oracle, Amsterdam, Netherlands 
   - Java editor, JavaScript editor, tutorials 
   - blogs.oracle.com/geertjan 
 
-=== Georgia Ingham 
-Committer, PPMC Member
-
-  - apache id: georgia 
-  - IDRsolutions, Leicester, UK 
-  - Java, Java EE, HTML5 
-  -  NetBeans articles on IDR blog 
-
-=== Ghader Arkani
-  - Tehran, Iran 
-  - Java, Java EE, Spring, Hibernate, Angular 
-
-=== Giuseppe Tino
-  - Amadeus IT Group, Nice
-  - Java, Java EE, Debugger, Git, Junit 
-
-=== Hermien Pellissier 
-Committer, PPMC Member
-
-  - apache id: hermien 
-  - Reutech Communications, Centurion, South Africa 
-  - Platform, API Support, JavaFX 
-  -  NetBeans Ruminations 
-
-=== Ilia Gromov 
-Committer, PPMC Member
-
-  - apache id: igromov 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: command line tooling, 
-  -  NetBeans C/C++ Support 
-
-=== Illya Kysil
-  - Luxembourg 
-  - Java, JavaEE, Platform, VCS 
-
 === Ioannis Kostaras 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: ikost 
   - Liége, Belgium 
@@ -262,24 +139,14 @@ Committer, PPMC Member
   - , blog 
 
 === Jan Lahoda 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: jlahoda 
   - Oracle, Czech Republic 
   - Java editor/support, Editor 
 
-=== Jens Deters
-  - codecentric AG, Germany 
-  - Java, JavaFX, Scala, IoT, Docker, Tutorials 
-  - http://twitter.com/@jerady 
-
-=== Jens Hofschröer
-  - WZL of RWTH Aachen University, Aachen, Germany 
-  - Platform, Java, Swing, Annotations 
-  -  http://blog.nigjo.de http://twitter.com/@nigjo 
-
 === Jesse Glick 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: jglick 
   - CloudBees, North Carolina USA 
@@ -294,35 +161,21 @@ Mentor
   - http://twitter.com/@jimjag 
 
 === Jiri Kovalsky 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: jkovalsky 
   - Oracle, Bohumin, Czech Republic 
   - Java, Plugins, NetCAT 
 
 === John McDonnell
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: johnmcdonnell 
   - BearingPoint Ireland, Dublin, Ireland 
-  - Maven, Java EE, Docker 
-
-=== John Brock 
-Committer, PPMC Member
-
-  - apache id: peppertech 
-  - Oracle, Seattle, WA. USA 
-  - JavaScript, HTML, CSS, OracleJET support 
-  -  OracleJET Community 
-
-=== Julien Enselme
-  - apache id: jenselme 
-  - CPMultimedia, Paris, France 
-  - JavaScript, HTML, CSS, Python 
-  -  http://www.jujens.eu/ 
+  - Maven, Java EE, Docker  
 
 === Junichi Yamamoto 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: junichi11 
   - Fukuoka, Japan 
@@ -334,43 +187,21 @@ Committer, PPMC Member
   - Java, JavaFX, JavaServer Faces, Education 
   -  https://www.omnijava.com https://www.dawsoncollege.qc.ca/computer-science-technology/ http://twitter.com/@omniprof 
 
-=== Kenrik Veenstra 
-  - Corizon, Groningen, the Netherlands 
-  - Platform, Maven, JavaFX 
-
 === Laszlo Kishalmi 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: lkishalmi 
 
 === Leonardo Zanivan 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: panga 
   - Aurea Software, Criciúma, Brazil 
   - Java editor, JavaScript, Plugins 
   - http://twitter.com/@leonardopanga 
 
-=== Ludovic Hochet
-  - Tours, France 
-  - Java, Maven 
-  -  http://twitter.com/@lhochet 
-
-=== Marcelo Aleksandravicius
-  - Computer Forensic, Rio de Janeiro, Brazil 
-  - Platform, C/C++, Tutorials, Installer, Visual Library 
-  - http://twitter.com/@AleksMarcelo 
-
-=== Maria Dalmatova 
-Committer, PPMC Member
-
-  - apache id: mromashova 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: Debugger 
-  -  NetBeans C/C++ Support 
-
 === Mark Stephens 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: markee174 
   - IDRsolutions, Tonbridge, Kent, UK 
@@ -378,14 +209,14 @@ Committer, PPMC Member
   -  NetBeans articles on IDR blog 
 
 === Martin Klähn 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: mklaehn 
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaFX, JavaEE, Groovy, Gradle 
 
 === Michael Müller 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: muellermi 
   - Germany 
@@ -393,65 +224,22 @@ Committer, PPMC Member
   -  Michael's Blog Michael Müller 
 
 === Matthias Bläsing 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: matthiasblaesing 
   - Germany 
   - Database, XML 
 
 === Neil C Smith 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: neilcsmith 
   - Praxis LIVE, Oxford, UK 
   - Platform, API Support, Java editor/support 
   -  NetBeans articles in Praxis LIVE blog 
 
-=== Nelson Cazonda
-  - BCI - Banco Comercial e de Investimentos, Maputo, Mozambique 
-  - Platform, Editor, Java EE, Maven, Gradle 
-
-=== Oliver Rettig
-  - Karlsruhe, Germany 
-  - Platform, JavaFX, XML, ant 
-  -  https://github.com/orat 
-
-=== Petr Kudriavtsev 
-Committer, PPMC Member
-
-  - apache id: petrk 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: code model, code completion and mixed Java/C++ development 
-  -  NetBeans C/C++ Support 
-
-=== Ricardo Pacheco
-  - Aleph5, México 
-  - NetBeans Platform, Java, JavaFX, Tutorials 
-  -  https://github.com/rcpacheco 
-
-=== Richard Lowery
-  - Charlotte, NC, USA 
-  - Platform, Maven, JavaEE, Cassandra 
-  - http://twitter.com/@rhlowery 
-
-=== Ross Lamont
-  - Melbourne, Australia 
-  - Java, C/C++, Embedded, XML, Maven, Domain Specific Languages 
-
-=== Steven Yi 
-Committer, PPMC Member
-
-  - apache id: stevenyi 
-  - Rochester, NY, USA 
-  - Platform, JavaFX 
-
-=== Subhash Koganti
-  - AIG, Greensboro,NC,USA 
-  - Java / Java EE, Spring, Jboss Fuse,Camel 
-  -  https://github.com/subhash-koganti 
-
 === Sven Reimers 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: sreimers 
   - Airbus Defence and Space, Bodensee, Germany 
@@ -462,58 +250,41 @@ Committer, PPMC Member
   - RCP, API, EE, Spring, Angular, TypeScript 
   -  http://thilina01.com/
   -  https://www.linkedin.com/in/thilina-ranathunga-35bb2864/
-  -  https://github.com/thilina01
-
-=== Thomas Kruse
-  - trion development, Münster, Germany 
-  - Spring Boot, Maven, Angular 
-  - http://twitter.com/@everflux 
+  -  https://github.com/thilina01 
 
 === Timon Veenstra 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: timon 
   - Corizon, Groningen, the Netherlands 
   - Platform, Maven, API Support, JavaFX 
 
 === Tushar Joshi 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: tusharjoshi 
   - Persistent Systems, Nagpur, Maharashtra, India 
   - Platform, API Support 
   -  NetBeans IDE Blog by Tushar Joshi 
 
-=== Vladimir Kvashin 
-Committer, PPMC Member
-
-  - apache id: vkvashin 
-  - Oracle, St. Petersburg, Russia 
-  - C/C++: remote development features 
-  -  NetBeans C/C++ Support 
-
 === Vladimir Voskresensky 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: vladimirvv 
-  - Oracle, St. Petersburg, Russia 
+  - Azul, St. Petersburg, Russia 
   - C/C++: code model (ANTLR and Clang-based), refactoring, code completion, reverese engineering, performance and memory optimizations 
   -  NetBeans C/C++ Support 
 
 === Wade Chandler 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: wadechandler 
   - Knoxville, TN, USA 
   - Java, Groovy, Platform, API Support, Gradle, Maven, C++, Python 
   - http://twitter.com/@wadechandler, wadechandler.com 
 
-=== Yonathan Kidanemariam
-  - Information Builders, New Jersey, USA 
-  - Platform, Editor, Tutorials 
-
 === Zoran Sevarac 
-Committer, PPMC Member
+Committer, PMC Member
 
   - apache id: sevarac 
   - University of Belgrade, Faculty of Organizational Sciences, Belgrade, Serbia 
