Further tweaks to the PMC list

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Team / Apache NetBeans
+= Apache NetBeans Team
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -25,8 +25,6 @@
 :description: Apache NetBeans Who is Who
 :toc: left
 :toc-title: 
-
-== The Apache NetBeans Team
 
 The Apache NetBeans Project Management Committee and Committers are as follows:
 
@@ -67,12 +65,7 @@ Committer, PMC Member
 
   - apache id: brunoflavio 
   - Porto, Portugal 
-  - Groovy / Grails support 
-
-=== Caoyuan Deng
-  - Victoria, BC, Canada 
-  - Scala, Akka 
-  -  https://github.com/dcaoyuan 
+  - Groovy / Grails support  
 
 === Christian Lenz 
 Committer, PMC Member
