Pic added as experiment

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -116,6 +116,9 @@ Committer, PMC Member
   - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
 
 === Geertjan Wielenga 
+
+image::contributor-geertjan.png[role=left]
+
 Committer, PMC Member
 
   - apache id: geertjan 
