Positioning of image

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,9 @@ Committer, PMC Member
 
 === Geertjan Wielenga 
 
-image::contributor-geertjan.png[role=left] Committer, PMC Member
+[.right.text-center]
+image::contributor-geertjan.png[float="left"] 
+Committer, PMC Member
   - apache id: geertjan 
   - Oracle, Amsterdam, Netherlands 
   - Java editor, JavaScript editor, tutorials 
