Tweaking image location

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -115,15 +115,9 @@ Committer, PMC Member
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
 
-=== Geertjan Wielenga 
+=== Geertjan Wielenga (geertjan)
 
-[.right.text-center]
-image::contributor-geertjan.png[float="left"] 
-Committer, PMC Member
-  - apache id: geertjan 
-  - Oracle, Amsterdam, Netherlands 
-  - Java editor, JavaScript editor, tutorials 
-  - blogs.oracle.com/geertjan 
+image::contributor-geertjan.png[role="related thumb right"] Oracle, Amsterdam, Netherlands  
 
 === Ioannis Kostaras 
 Committer, PMC Member
