Another attempt to set image

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,10 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-image::contributor-geertjan.png[role="related thumb right"] Oracle, Amsterdam, Netherlands  
+<p>
+<img src="contributor-geertjan.png" alt="Geertjan Wielenga" align="left"> Oracle, Amsterdam, Netherlands  
+</p>
+
 
 === Ioannis Kostaras 
 Committer, PMC Member
