--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,10 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-<p>
-<img src="contributor-geertjan.png" alt="Geertjan Wielenga" align="left"> Oracle, Amsterdam, Netherlands  
-</p>
-
+image::contributor-geertjan.png[]
 
 === Ioannis Kostaras 
 Committer, PMC Member
