Table to contain image

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,8 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-image::contributor-geertjan.png[]
+| image::contributor-geertjan.png[] | Oracle, Amsterdam, Netherlands |
+|-----|-----|
 
 === Ioannis Kostaras 
 Committer, PMC Member
