--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,8 +117,9 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-| image::contributor-geertjan.png[] | Oracle, Amsterdam, Netherlands |
-|-----|-----|
+|              |   |
+:-------------------------:|:-------------------------:
+image::contributor-geertjan.png[]  |  Oracle
 
 === Ioannis Kostaras 
 Committer, PMC Member
