--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,9 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-|              |   |
-:-------------------------:|:-------------------------:
-image::contributor-geertjan.png[]  |  Oracle
+image::contributor-geertjan.png[]
 
 === Ioannis Kostaras 
 Committer, PMC Member
