adding table for image with text next to it

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,16 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-image::contributor-geertjan.png[]
+<table>
+  <tr>
+      <td>
+    image::contributor-geertjan.png[]
+      </td>
+      <td>
+    image::contributor-geertjan.png[]
+      </td>
+    </tr>
+</table>
 
 === Ioannis Kostaras 
 Committer, PMC Member
