Better table for markdown

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,16 +117,10 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-<table>
-  <tr>
-      <td>
-    image::contributor-geertjan.png[]
-      </td>
-      <td>
-    image::contributor-geertjan.png[]
-      </td>
-    </tr>
-</table>
+|              |   |
+:-------------------------:|:-------------------------:
+![](contributor-geertjan.png)  |  Oracle, Amsterdam, Netherlands
+
 
 === Ioannis Kostaras 
 Committer, PMC Member
