--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,10 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-  First Header  | Second Header
-  ------------- | -------------
-  Content Cell  | Content Cell
-  Content Cell  | Content Cell
+image::contributor-geertjan.png[]
 
 === Ioannis Kostaras 
 Committer, PMC Member
