--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -119,6 +119,13 @@ Committer, PMC Member
 
 image::contributor-geertjan.png[]
 
+[width="15%"]
+|=======
+|1 |2 |A
+|3 |4 |B
+|5 |6 |C
+|=======
+
 === Ioannis Kostaras 
 Committer, PMC Member
 
