--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -121,7 +121,7 @@ image::contributor-geertjan.png[]
 
 [width="15%"]
 |=======
-|1 |2 |A
+|image::contributor-geertjan.png[] |2 |A
 |3 |4 |B
 |5 |6 |C
 |=======
