--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -132,7 +132,7 @@ image::contributor-geertjan.png[]
 [width="50%",cols=">s,^m,e",frame="topbot",options="header,footer"]
 |==========================
 |      2+|Columns 2 and 3
-|1       |image::contributor-geertjan.png[]  |Item 1
+|1       |include::contributor-geertjan.png[]  |Item 1
 |2       |Item 2  |Item 2
 |3       |Item 3  |Item 3
 |4       |Item 4  |Item 4
