--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -119,25 +119,9 @@ Committer, PMC Member
 
 image::contributor-geertjan.png[]
 
-[width="50%",cols=">s,^m,e",frame="topbot",options="header,footer"]
-|==========================
-|      2+|Columns 2 and 3
-|1       |Item 1  |Item 1
-|2       |Item 2  |Item 2
-|3       |Item 3  |Item 3
-|4       |Item 4  |Item 4
-|footer 1|footer 2|footer 3
-|==========================
-
-[width="50%",cols=">s,^m,e",frame="topbot",options="header,footer"]
-|==========================
-|      2+|Columns 2 and 3
-|1       |include::contributor-geertjan.png[]  |Item 1
-|2       |Item 2  |Item 2
-|3       |Item 3  |Item 3
-|4       |Item 4  |Item 4
-|footer 1|footer 2|footer 3
-|==========================
+|===
+a|image::contributor-geertjan.png[] | Oracle, Amsterdam, Netherlands
+|===
 
 === Ioannis Kostaras 
 Committer, PMC Member
