--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,8 +117,9 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
+[width="40%",frame="none"]
 |===
-a|image::contributor-geertjan.png[] | Oracle, Amsterdam, Netherlands
+a|image::contributor-geertjan.png[] | - Oracle, Amsterdam, Netherlands
 |===
 
 === Ioannis Kostaras 
