--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -119,7 +119,7 @@ Committer, PMC Member
 
 [width="40%",frame="none"]
 |===
-a|image::contributor-geertjan.png[] | - Oracle, Amsterdam, Netherlands
+a|image::contributor-geertjan.png[] | Oracle, Amsterdam, Netherlands
 |===
 
 === Ioannis Kostaras 
