--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -119,7 +119,8 @@ Committer, PMC Member
 
 [width="40%",frame="none"]
 |===
-a|image::contributor-geertjan.png[] | Oracle<br/>Amsterdam, Netherlands
+a|image::contributor-geertjan.png[] | a|Oracle
+Amsterdam, Netherlands
 |===
 
 === Ioannis Kostaras 
