--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,10 +117,18 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="40%",frame="none"]
+[width="15%",frame="none"]
 |===
-a|image::contributor-geertjan.png[] | a|Oracle
+a|image::contributor-geertjan.png[] | Oracle, Netherlands
+|===
+
+[width="15%",frame="none"]
+|===
+a|image::contributor-geertjan.png[]
+| Oracle
+
 Amsterdam, Netherlands
+
 |===
 
 === Ioannis Kostaras 
