--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -122,8 +122,9 @@ Committer, PMC Member
 a|image::contributor-geertjan.png[] | Oracle, Netherlands
 |===
 
-[width="15%",frame="none"]
+[width="15%",frame="none", align="left"]
 |===
+|  | 
 a|image::contributor-geertjan.png[]
 | Oracle
 
