--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,18 +117,13 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="15%",frame="none"]
-|===
-a|image::contributor-geertjan.png[] | Oracle, Netherlands
-|===
-
-[width="15%",frame="none", align="left"]
+[width="50%",frame="none", align="left"]
 |===
 |  | 
 a|image::contributor-geertjan.png[]
-| Oracle
+a| * Oracle
 
-Amsterdam, Netherlands
+* Amsterdam, Netherlands
 
 |===
 
