--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="50%",frame="none", align="left"]
+[.left, width=50%,frame="none", align="left"]
 |===
 |  | 
 a|image::contributor-geertjan.png[]
