--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,12 +117,12 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[.left, width=50%,frame="none", align="left"]
+[.left, width=50%,frame="none"]
 |===
 |  | 
 a|image::contributor-geertjan.png[]
 a| * Oracle
-* Amsterdam, Netherlands
+* Amsterdam, The Netherlands
 |===
 
 === Ioannis Kostaras 
