--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,13 +117,22 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[.left, width=50%,frame="none"]
+[float="left",width="50%,"frame="none"]
 |===
 |  | 
 a|image::contributor-geertjan.png[]
 a| * Oracle
-* Amsterdam, The Netherlands
+* Amsterdam, Netherlands
 |===
+
+[width="15%"]
+|=======
+|1 |2 |A
+|3 |4 |B
+|5 |6 |C
+|=======
+
+
 
 === Ioannis Kostaras 
 Committer, PMC Member
