--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -118,21 +118,12 @@ Committer, PMC Member
 === Geertjan Wielenga (geertjan)
 
 [float="left",width="50%,"frame="none"]
-|===
-|  | 
-a|image::contributor-geertjan.png[]
-a| * Oracle
+|=== 
+a|image::contributor-geertjan.png[] a| * apache id: geertjan
+* Oracle
 * Amsterdam, Netherlands
+* NetBeans Platform
 |===
-
-[width="15%"]
-|=======
-|1 |2 |A
-|3 |4 |B
-|5 |6 |C
-|=======
-
-
 
 === Ioannis Kostaras 
 Committer, PMC Member
