--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,12 +117,12 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[float="left",width="50%,"frame="none"]
+[align="left",width="50%,"frame="none"]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
 * Amsterdam, Netherlands
-* NetBeans Platform
+* NetBeans Platform, Java Editor
 |===
 
 === Ioannis Kostaras 
