--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,13 +117,20 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[align="left",width="50%,"frame="none"]
+[width="50%]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
 * Amsterdam, Netherlands
 * NetBeans Platform, Java Editor
 |===
+
+[width="15%"]
+|=======
+|1 |2 |A
+|3 |4 |B
+|5 |6 |C
+|=======
 
 === Ioannis Kostaras 
 Committer, PMC Member
