--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="50%]
+[width="50%", align="left"]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
@@ -125,9 +125,9 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * NetBeans Platform, Java Editor
 |===
 
-[width="15%"]
+[width="100%"]
 |=======
-|1 |2 |A
+|1 |2 |D
 |3 |4 |B
 |5 |6 |C
 |=======
