--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="50%", align="left"]
+[width="50%", align="left", frame="none"]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
@@ -127,7 +127,7 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 
 [width="100%"]
 |=======
-|1 |2 |D
+|1 |2 |E
 |3 |4 |B
 |5 |6 |C
 |=======
