--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[width="50%", align="left", frame="none"]
+[.left, width="50%", align="left", frame="none"]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
@@ -125,9 +125,9 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * NetBeans Platform, Java Editor
 |===
 
-[width="100%"]
+[.right, width="100%"]
 |=======
-|1 |2 |E
+|1 |2 |F
 |3 |4 |B
 |5 |6 |C
 |=======
