--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -117,7 +117,7 @@ Committer, PMC Member
 
 === Geertjan Wielenga (geertjan)
 
-[.left, width="50%", align="left", frame="none"]
+[align="left", width="100%"]
 |=== 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
@@ -125,7 +125,7 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * NetBeans Platform, Java Editor
 |===
 
-[.right, width="100%"]
+[align="right, width="10%"]
 |=======
 |1 |2 |F
 |3 |4 |B
