--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -115,10 +115,9 @@ Committer, PMC Member
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
 
-=== Geertjan Wielenga (geertjan)
-
 [align="left", width="100%"]
 |=== 
+a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Oracle
 * Amsterdam, Netherlands
