--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -107,15 +107,17 @@ Committer, PMC Member
   - Tidalwave s.a.s., Genoa / Milan, Italy 
   - IDE, Maven, Docker, JavaFX 
   -  http://tidalwave.it/fabrizio/blog/ 
+  
+[width="100%"]
+|=== 
+a|=== Florian Vogler| 
+a|image::contributor-florian.png[] a| * apache id: fvogler
+* Airbus Defence and Space
+* Bodensee, Germany
+* NetBeans Platform, JavaEE, Groovy, Gradle, Maven, Module System
+|===  
 
-=== Florian Vogler 
-Committer, PMC Member
-
-  - apache id: fvogler 
-  - Airbus Defence and Space, Bodensee, Germany 
-  - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
-
-[align="left", width="100%"]
+[width="100%"]
 |=== 
 a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
@@ -123,13 +125,6 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * Amsterdam, Netherlands
 * NetBeans Platform, Java Editor
 |===
-
-[align="right, width="10%"]
-|=======
-|1 |2 |F
-|3 |4 |B
-|5 |6 |C
-|=======
 
 === Ioannis Kostaras 
 Committer, PMC Member
