--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -108,16 +108,16 @@ Committer, PMC Member
   - IDE, Maven, Docker, JavaFX 
   -  http://tidalwave.it/fabrizio/blog/ 
   
-[width="100%"]
+[width="15%"]
 |=== 
 a|=== Florian Vogler| 
 a|image::contributor-florian.png[] a| * apache id: fvogler
 * Airbus Defence and Space
 * Bodensee, Germany
-* NetBeans Platform, JavaEE, Groovy, Gradle, Maven, Module System
+* NetBeans Platform, Groovy, Maven
 |===  
 
-[width="100%"]
+[width="15%"]
 |=== 
 a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
