--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -97,18 +97,17 @@ Committer, PMC Member
   - apache id: ehsavoie 
   - Red Hat, Barraux, France 
   - WildFly plugin 
-
-=== Eric Barboni
-  - apache id: skygo 
-  - ICS - IRIT, Université Paul Sabatier, Toulouse, France 
-  - maven, platform, java editor 
-
-=== Fabrizio Giudici
-  - Tidalwave s.a.s., Genoa / Milan, Italy 
-  - IDE, Maven, Docker, JavaFX 
-  -  http://tidalwave.it/fabrizio/blog/ 
   
-[width="600"]
+[width="70%"]
+|=== 
+a|=== Eric Barboni| 
+a|image::contributor-skygo.png[] a| * apache id: skygo
+* ICS - IRIT, Université Paul Sabatier
+* Toulouse, France
+* NetBeans Platform, Java Editor, Maven
+|===   
+  
+[width="70%"]
 |=== 
 a|=== Florian Vogler| 
 a|image::contributor-florian.png[] a| * apache id: fvogler
@@ -117,7 +116,7 @@ a|image::contributor-florian.png[] a| * apache id: fvogler
 * NetBeans Platform, Groovy, Maven
 |===  
 
-[width="600"]
+[width="7-%"]
 |=== 
 a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
