--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -89,14 +89,16 @@ Committer, PMC Member
   - apache id: dheffelfinger 
   - Ensode Technology, LLC,  Fairfax, VA, USA 
   - Java EE 
-  -  http://www.ensode.net/roller/dheffelfinger/ 
-
-=== Emmanuel Hugonnet 
-Committer, PMC Member
-
-  - apache id: ehsavoie 
-  - Red Hat, Barraux, France 
-  - WildFly plugin 
+  -  http://www.ensode.net/roller/dheffelfinger/  
+  
+[width="70%"]
+|=== 
+a|=== Emmanuel Hugonnet| 
+a|image::contributor-ehsavoie.png[] a| * apache id: ehsavoie
+* Red Hat
+* Barraux, France 
+* WildFly
+|===    
   
 [width="70%"]
 |=== 
@@ -116,7 +118,7 @@ a|image::contributor-florian.png[] a| * apache id: fvogler
 * NetBeans Platform, Groovy, Maven
 |===  
 
-[width="7-%"]
+[width="70%"]
 |=== 
 a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * apache id: geertjan
