--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Apache NetBeans Team
+= Who's Who
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -26,46 +26,48 @@
 :toc: left
 :toc-title: 
 
-The Apache NetBeans Project Management Committee and Committers are as follows:
+Apache NetBeans Project Management Committee and Committers are listed alphabetically below.
 
-=== Anton Epple 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Anton Epple| 
+a|image::contributor-monacotoni.png[] a| * apache id: monacotoni
+* Dukehoff GmbH
+* Munich, Germany
+* DukeScript, HTML/Java, NetBeans Platform 
+|=== 
 
-  - apache id: monacotoni 
-  - Dukehoff GmbH, Munich, Germany 
-  - DukeScript, HTML/Java, NetBeans Platform 
-  -  http://dukescript.com http://twitter.com/@monacotoni 
+[width="70%"]
+|=== 
+a|=== Antonio Vieiro| 
+a|image::contributor-vieiro.png[] a| * apache id: vieiro
+* Spain
+* Platform, editor, C, Java, Java EE  
+|=== 
 
-=== Antonio Vieiro 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Antonio Vieiro| 
+a|image::contributor-avbravo.png[] a| * apache id: avbravo
+* Panama
+* Java EE, NetBeans Platform, NoSQL   
+|=== 
 
-  - apache id: vieiro 
-  - Spain 
-  - Platform, editor, C, Java, Java EE 
-  -  http://vieiro.net 
+[width="70%"]
+|=== 
+a|=== Bertrand Delacretaz| 
+a|image::contributor-avbravo.png[] a| * apache id: bdelacretaz
+* Switzerland
+* http://grep.codeconsult.ch   
+|=== 
 
-=== Aristides Villarreal 
-Committer, PMC Member
-
-  - apache id: avbravo 
-  - Panama 
-  - Java EE, NetBeans Platform, NoSQL 
-  - http://twitter.com/@avbravo, http://avbravo.blogspot.com 
-
-=== Bertrand Delacretaz 
-PMC Member
-
-  - apache id: bdelacretaz 
-  - Switzerland 
-  - I'm just a NetBeans user so far 
-  - http://grep.codeconsult.ch 
-
-=== Bruno Flávio 
-Committer, PMC Member
-
-  - apache id: brunoflavio 
-  - Porto, Portugal 
-  - Groovy / Grails support  
+[width="70%"]
+|=== 
+a|=== Bruno Flávio| 
+a|image::contributor-brunoflavio.png[] a| * apache id: brunoflavio
+* Porto, Portugal
+* Groovy / Grails support 
+|===   
 
 === Christian Lenz 
 Committer, PMC Member
