--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -23,7 +23,7 @@
 :icons: font
 :keywords: Apache NetBeans Team Who is Who
 :description: Apache NetBeans Who is Who
-:toc: left
+:toc: none
 :toc-title: 
 
 Apache NetBeans Project Management Committee and Committers are listed alphabetically below.
@@ -56,7 +56,7 @@ a|image::contributor-avbravo.png[] a| * apache id: avbravo
 [width="70%"]
 |=== 
 a|=== Bertrand Delacretaz| 
-a|image::contributor-avbravo.png[] a| * apache id: bdelacretaz
+a|image::contributor-bertrand.png[] a| * apache id: bdelacretaz
 * Switzerland
 * http://grep.codeconsult.ch   
 |=== 
@@ -69,13 +69,11 @@ a|image::contributor-brunoflavio.png[] a| * apache id: brunoflavio
 * Groovy / Grails support 
 |===   
 
-=== Christian Lenz 
-Committer, PMC Member
-
-  - apache id: chrizzly 
-  - Leipzig, Germany 
-  - JavaScript, HTML5, Node, PHP, Java Editor, Database, Maven, Hints, C/C++, Plugin Dev. 
-  -  https://github.com/Chris2011 https://www.facebook.com/Chrizzly42 
+|=== 
+a|=== Christian Lenz| 
+a|image::contributor-chrizzly.png[] a| * apache id: chrizzly
+* Leipzig, Germany
+|===  
 
 === Constantin Drabo 
 Committer, PMC Member
