--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -69,28 +69,29 @@ a|image::contributor-brunoflavio.png[] a| * apache id: brunoflavio
 * Groovy / Grails support 
 |===   
 
+[width="70%"]
 |=== 
 a|=== Christian Lenz| 
 a|image::contributor-chrizzly.png[] a| * apache id: chrizzly
 * Leipzig, Germany
 |===  
 
-=== Constantin Drabo 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Constantin Drabo| 
+a|image::contributor-pandaconstantin.png[] a| * apache id: pandaconstantin
+* Université de Ouagadougou
+* Ouagadougou, Burkina Faso
+|===
 
-  - apache id: pandaconstantin 
-  - Université de Ouagadougou, Ouagadougou, Burkina Faso 
-  - Q/A , JavaEE, C/C++ , Javascript, HTML 
-  - http://twitter.com/@pandaconstantin , http://blog.fedora-fr.org/pandaconstantin/ 
+[width="70%"]
+|=== 
+a|=== David Heffelfinger| 
+a|image::contributor-dheffelfinger.png[] a| * apache id: dheffelfinger
+* Ensode Technology, LLC
+* Fairfax, VA, USA
+|===
 
-=== David Heffelfinger 
-Committer, PMC Member
-
-  - apache id: dheffelfinger 
-  - Ensode Technology, LLC,  Fairfax, VA, USA 
-  - Java EE 
-  -  http://www.ensode.net/roller/dheffelfinger/  
-  
 [width="70%"]
 |=== 
 a|=== Emmanuel Hugonnet| 
