--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -45,7 +45,7 @@ a|image::contributor-vieiro.png[] a| * apache id: vieiro
 
 [width="70%"]
 |=== 
-a|=== Antonio Vieiro| 
+a|=== Aristides Villarreal| 
 a|image::contributor-avbravo.png[] a| * apache id: avbravo
 * Panama
 * Java EE, NetBeans Platform, NoSQL   
