--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -126,49 +126,48 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 * NetBeans Platform, Java Editor
 |===
 
-=== Ioannis Kostaras 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Ioannis Kostaras| 
+a|image::contributor-ikost.png[] a| * apache id: ikost
+* Liége, Belgium
+|===
 
-  - apache id: ikost 
-  - Liége, Belgium 
-  - C/C++/Java/JavaEE/JavaFX/HTML5/CSS3, Platform, Ruby, RoR, Python, Tutorials 
-  - , blog 
+[width="70%"]
+|=== 
+a|=== Jan Lahoda| 
+a|image::contributor-jlahoda.png[] a| * apache id: jlahoda
+* Oracle
+* Prague, Czech Republic
+* Java Editor, Java
+|===
 
-=== Jan Lahoda 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Jesse Glick| 
+a|image::contributor-jglick.png[] a| * apache id: jglick
+* CloudBees
+* North Carolina, USA 
+* API Support
+|===
 
-  - apache id: jlahoda 
-  - Oracle, Czech Republic 
-  - Java editor/support, Editor 
+[width="70%"]
+|=== 
+a|=== Jiri Kovalsky| 
+a|image::contributor-jkovalsky.png[] a| * apache id: jkovalsky
+* Oracle
+* Bohumin, Czech Republic
+* Java, Plugins, NetCAT
+|===
 
-=== Jesse Glick 
-Committer, PMC Member
-
-  - apache id: jglick 
-  - CloudBees, North Carolina USA 
-  - API Support 
-  - http://twitter.com/@tyvole 
-
-=== Jim Jagielski
-Mentor
-
-  - apache id: jim 
-  - Forest Hill, MD USA 
-  - http://twitter.com/@jimjag 
-
-=== Jiri Kovalsky 
-Committer, PMC Member
-
-  - apache id: jkovalsky 
-  - Oracle, Bohumin, Czech Republic 
-  - Java, Plugins, NetCAT 
-
-=== John McDonnell
-Committer, PMC Member
-
-  - apache id: johnmcdonnell 
-  - BearingPoint Ireland, Dublin, Ireland 
-  - Maven, Java EE, Docker  
+[width="70%"]
+|=== 
+a|=== John McDonnell| 
+a|image::contributor-johnmcdonnell.png[] a| * apache id: johnmcdonnell
+* BearingPoint Ireland
+* Dublin, Ireland 
+* Maven, Java EE, Docker  
+|===
 
 === Junichi Yamamoto 
 Committer, PMC Member
